--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script defer src="js/fontawesome-all.min.js"></script>
         <style>
 
-            .body {
+            body {
                 font-family: Helvetica;
                 font-size:16px;
             }
