--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             .header {
                 
                 max-width:680px;
-                margin: 15px auto;
-                padding-bottom:15px;
-                border-bottom:1px solid #ccc;
+                margin: 20px auto;
+                padding: bottom 15;px;
+                border-bottom:1px solid #bbb;
                 
             }
             .name {
@@ -125,5 +125,15 @@
                 <img class="duckhover" src="assets/duckhover.png"></img>
             </a>
         </div>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37980954-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-37980954-1');
+        </script>
+
     </body>
 </html>
