--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 
                 max-width:680px;
                 margin: 20px auto;
-                padding: bottom 15;px;
+                padding-bottom: 15px;
                 border-bottom:1px solid #bbb;
                 
             }
