--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lucas Manfield</title>
+        <title>Lucas Manfield 🌹</title>
+        <meta name="description" content="writer and technologist - brooklyn">
+        <meta name="keywords" content="Lucas,Manfield,Mansfield">
+        <meta name="author" content="Lucas Manfield">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="js/fontawesome-all.min.js"></script>
         <style>
 
@@ -9,13 +13,29 @@
                 font-family: Helvetica;
                 font-size:16px;
             }
+
+            .me {
+                float:left;
+                font-size:20px;
+            }
+
+            .bio {
+                font-size:12px;
+                margin-top:5px;
+                color:#777;
+            }
+
             .header {
                 
                 max-width:680px;
                 margin: 20px auto;
+                height:34px;
                 padding-bottom: 15px;
                 border-bottom:1px solid #bbb;
                 
+            }
+            .contact {
+                margin-top:15px;
             }
             .name {
                 position:relative;
@@ -75,20 +95,14 @@
                 width:100%;
                 object-fit: contain;
             }
-
-            a.patent {
-                font-weight: bold;
-                text-align: center;
-                color: black;
-                text-decoration: none;
-                font-size: 18px;
-                line-height: 100px;
-            }
         </style>
     </head>
     <body>
         <div class="header">
-            <span class="name">Lucas Manfield</span>
+            <div class="me">
+                <div class="name">Lucas Manfield</div>
+                <div class="bio">Software developer and writer based in Brooklyn, NY</div>
+            </div>
             <div class="contact">
                 <a href="mailto:lman817+contact@gmail.com"><i class="far fa-envelope"></i></a>
                 <a href="https://linkedin.com/in/manfield"><i class="fab fa-linkedin"></i></a>
@@ -115,10 +129,10 @@
                 <img src="assets/greencharge.png"></img>
             </a>
             <a class="project patent" href="https://patentimages.storage.googleapis.com/a3/67/79/df98035fbbecce/US9434271.pdf">
-                US 9,434,271 
+                <img src="assets/patent_conditioning.png"></img>
             </a>
             <a class="project patent" href="https://patentimages.storage.googleapis.com/1b/23/10/513995e436e638/US9714837.pdf">
-                US 9,714,837
+                <img src="assets/patent_routing.png"></img>
             </a>
             <a class="project project3x duck" href="https://itunes.apple.com/us/developer/lawlmart/id301473451">
                 <img src="assets/duck.png"></img>
