--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
             <a class="project" href="https://technical.ly/brooklyn/author/lmanfield/">
                 <img src="assets/technically.png"></img>
             </a>
+            <a class="project" href="http://crr.bc.edu/working-papers/elderly-poverty-in-the-united-states-in-the-21st-century-exploring-the-role-of-assets-in-the-supplemental-poverty-measure/">
+                <img src="assets/retirement.png"></img>
+            </a>
             <a class="project" href="https://plugshare.com">
                 <img src="assets/plugshare.png"></img>
             </a>
