--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Lucas Manfield 🌹</title>
-        <meta name="description" content="writer and technologist - brooklyn">
+        <meta name="description" content="Writer and technologist - Brooklyn">
         <meta name="keywords" content="Lucas,Manfield,Mansfield">
         <meta name="author" content="Lucas Manfield">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -101,7 +101,7 @@
         <div class="header">
             <div class="me">
                 <div class="name">Lucas Manfield</div>
-                <div class="bio">Software developer and writer based in Brooklyn, NY</div>
+                <div class="bio">Writer and technologist - Brooklyn</div>
             </div>
             <div class="contact">
                 <a href="mailto:lman817+contact@gmail.com"><i class="far fa-envelope"></i></a>
