--- a/bin/airtest.html
+++ b/bin/airtest.html
@@ -11,7 +11,7 @@
       
     FB.AppEvents.logPageView();   
     FB.getLoginStatus(function(response) {
-      statusChangeCallback(response);
+      console.log(response)
     })  
   };
 
