--- a/bin/airtest.html
+++ b/bin/airtest.html
@@ -25,5 +25,6 @@
 </script>
 </head>
 <body>
+        <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
 </body>
 </html>
