--- a/bin/airtest.html
+++ b/bin/airtest.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 <script>
+    function ready() {
+        FB.api('/me', function(response) {
+            console.log(JSON.stringify(response));
+        });
+    }
+    
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '194219014642900',
@@ -25,6 +31,6 @@
 </script>
 </head>
 <body>
-        <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
+        <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" onlogin="ready();"></div>
 </body>
 </html>
