--- a/bin/airtest.html
+++ b/bin/airtest.html
@@ -34,6 +34,6 @@
 </script>
 </head>
 <body>
-        <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" onlogin="ready();"></div>
+        <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-scope="user_videos" data-auto-logout-link="false" data-use-continue-as="false" onlogin="ready();"></div>
 </body>
 </html>
