--- a/bin/airtest.html
+++ b/bin/airtest.html
@@ -3,7 +3,7 @@
 <script>
     
     function ready() {
-        FB.api('/me/videos/uploaded?fields=id,created_time,permalink_url,source', function(response) {
+        FB.api('/me/videos/uploaded?fields=id,created_time,format,length,title,description,source', function(response) {
             console.log(JSON.stringify(response));
         });
     }
