--- a/bin/airtest.html
+++ b/bin/airtest.html
@@ -4,13 +4,20 @@
     
     function ready() {
         FB.api('/me/videos/uploaded?fields=id,created_time,format,length,title,description,source', function(response) {
-            console.log(JSON.stringify(response));
-        });
+            fetch('https://xx4zlan94f.execute-api.us-east-1.amazonaws.com/dev/clips/batch/create',
+            {
+                headers: {
+                'Accept': 'application/json',
+                'Content-Type': 'application/json'
+                },
+                method: "POST",
+                body: JSON.stringify({a: 1, b: 2})
+            })
     }
 
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '194219014642900',
+      appId      : '537171880000580',
       cookie     : true,
       xfbml      : true,
       version    : 'v2.12'
