--- a/bin/airtest.html
+++ b/bin/airtest.html
@@ -18,6 +18,7 @@
                 }
                 videos.push(video)
             }
+            console.log(videos)
             fetch('https://xx4zlan94f.execute-api.us-east-1.amazonaws.com/dev/clips/batch/create',
             {
                 headers: {
