--- a/bin/airtest.html
+++ b/bin/airtest.html
@@ -7,6 +7,7 @@
             console.log(response)
             let videos = []
             for (let v of response.data) {
+                let date = Date.parse(v.created_time)
                 let video = {
                     hash: v.id,
                     importedUri: v.source,
@@ -14,7 +15,7 @@
                     duration: v.length,
                     mine: "mp4",
                     size: -1,
-                    recordedAt: 1522861046000
+                    recordedAt: date.getTime()
                 }
                 videos.push(video)
             }
