--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="https://linkedin.com/in/manfield">LinkedIn</a>
             <a href="https://github.com/lawlmart">Github</a>
             <a href="https://twitter.com/lucas_manfield">Twitter</a>
-            <a href="tel:5039191708">SMS</a>
+            <a href="mailto:lucas@manfield.me">Email</a>
         </div>
         <div id="clips">
 
