--- a/index.html
+++ b/index.html
@@ -47,6 +47,39 @@
         <div id="clips">
             <div class="clip">
                 <div class="date">
+                    Oct 19, 2018
+                </div>
+                <div class="article">
+                    <a href="http://bronxink.org/?p=28025" class="link">Mott Haven Charter Schools Still Fail to Enroll a Fair Share of Students Learning English</a>
+                    <span class="pub">
+                        BronxInk
+                    </span>
+                </div>
+            </div>
+            <div class="clip">
+                <div class="date">
+                    Oct 18, 2018
+                </div>
+                <div class="article">
+                    <a href="http://bronxink.org/parks-2018/little-west-bronx-park-that-could/" class="link">The little West Bronx Park that could, defying a decade of cleanup efforts</a>
+                    <span class="pub">
+                        BronxInk
+                    </span>
+                </div>
+            </div>  
+            <div class="clip">
+                <div class="date">
+                    Oct 18, 2018
+                </div>
+                <div class="article">
+                    <a href="http://bronxink.org/parks-2018/park-inspection-map/" class="link">(Interactive) The State of Bronx Parks</a>
+                    <span class="pub">
+                        BronxInk
+                    </span>
+                </div>
+            </div>
+            <div class="clip">
+                <div class="date">
                     Sep 28, 2018
                 </div>
                 <div class="article">
