--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="js/fontawesome-all.min.js"></script>
         <style>
-
+            html {
+                background: #EEE;
+            }
             body {
-                margin: 20px;
+                background: white;
+                width: 100%;
+                max-width: 800px;
+                margin: 40px auto;
+                padding:20px 10px;
+                border-radius: 2px;
+                box-shadow: 0px 1px 1px 1px rgba(0,0,0,.03);
             }
 
             a {
@@ -39,10 +47,10 @@
             }
 
             #header, #links {
-                margin-left: 115px;
+                margin-left: 15px
             }
             #links {
-                margin-bottom: 10px;
+                margin-bottom: 20px;
             }
         </style>
     </head>
