--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
         <div id="clips">
             <div class="clip">
                 <div class="date">
+                    May 28, 2019
+                </div>
+                <div class="article">
+                    <a href="https://newyorkcitylens.wixsite.com/dividedwestand/our-schools#comp-jvn1lh2d" class="link">School Segregation: A Big Experiment in Brooklyn</a>
+                    <span class="pub">
+                        NYCityLens
+                    </span>
+                </div>
+            </div>
+            <div class="clip">
+                <div class="date">
                     Mar 16, 2019
                 </div>
                 <div class="article">
