--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     Oct 9, 2019
                 </div>
                 <div class="article">
-                    <a href="https://www.latimes.com/california/story/2019-10-09/kedren-psychiatric-hospital-murder-investigation" class="link">Killing of patient, allegations of dangerous care haunt South L.A. psychiatric hospital, investigation finds</a>
+                    <a href="https://www.latimes.com/california/story/2019-10-09/kedren-psychiatric-hospital-murder-investigation" class="link">Killing of patient, allegations of dangerous care haunt South L.A. psychiatric hospital</a>
                     <span class="pub">
                         LA Times
                     </span>
