--- a/index.html
+++ b/index.html
@@ -59,12 +59,20 @@
             Lucas Manfield
         </div>
         <div id="links">
-            <a href="https://linkedin.com/in/manfield">LinkedIn</a>
-            <a href="https://github.com/lawlmart">Github</a>
-            <a href="https://twitter.com/lucas_manfield">Twitter</a>
-            <a href="mailto:lm3293@columbia.edu">Email</a>
+            <a href="mailto:lm3293@columbia.edu">Contact</a>
         </div>
         <div id="clips">
+            <div class="clip">
+                <div class="date">
+                    Oct 18, 2019
+                </div>
+                <div class="article">
+                    <a href="https://www.dallasobserver.com/news/protesters-police-and-maga-hat-sellers-that-was-better-than-expected-11784030" class="link">Protesters, Police and MAGA Hat Sellers Agree: Trump Rally Was Better Than Expected</a>
+                    <span class="pub">
+                        Dallas Observer
+                    </span>
+                </div>
+            </div>
             <div class="clip">
                 <div class="date">
                     Oct 9, 2019
