--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
         <div id="clips">
             <div class="clip">
                 <div class="date">
+                    Oct 21, 2019
+                </div>
+                <div class="article">
+                    <a href="https://www.dallasobserver.com/news/problems-plague-rollout-of-police-oversight-office-11784433" class="link">Problems Plague Rollout of Police Oversight Office</a>
+                    <span class="pub">
+                        Dallas Observer
+                    </span>
+                </div>
+            </div>
+            <div class="clip">
+                <div class="date">
                     Oct 18, 2019
                 </div>
                 <div class="article">
