--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
             #links {
                 margin-bottom: 20px;
             }
+
+            #header-clips {
+                text-align: center;;
+                padding:5px;
+                font-weight:bold;
+            }
         </style>
     </head>
     <body>
@@ -59,8 +65,10 @@
             Lucas Manfield
         </div>
         <div id="links">
-            <a href="mailto:lm3293@columbia.edu">Contact</a>
+            <a href="mailto:lman817+web@gmail.com">Contact</a>
+            <a href="https://www.linkedin.com/in/manfield">LinkedIn</a>
         </div>
+        <div id="header-clips">Selected Work</div>
         <div id="clips">
             <div class="clip">
                 <div class="date">
