--- a/index.html
+++ b/index.html
@@ -83,6 +83,28 @@
         <div id="clips">
             <div class="clip">
                 <div class="date">
+                    Dec 16, 2019
+                </div>
+                <div class="article">
+                    <a href="https://www.dallasobserver.com/news/heres-what-really-happens-when-dallas-resolves-homeless-encampments-11820140" class="link">Here’s What Really Happens When Dallas ‘Resolves’ Homeless Encampments</a>
+                    <span class="pub">
+                        Dallas Observer
+                    </span>
+                </div>
+            </div>
+            <div class="clip">
+                <div class="date">
+                    Nov 12, 2019
+                </div>
+                <div class="article">
+                    <a href="https://www.dallasobserver.com/news/ftc-approves-toothless-settlement-with-dfw-staffing-agencies-over-wage-fixing-allegations-11800222" class="link">FTC Approves Toothless Settlement with DFW Staffing Agencies over Wage Fixing Allegations</a>
+                    <span class="pub">
+                        Dallas Observer
+                    </span>
+                </div>
+            </div>
+            <div class="clip">
+                <div class="date">
                     Nov 11, 2019
                 </div>
                 <div class="article">
