--- a/index.html
+++ b/index.html
@@ -83,7 +83,18 @@
         <div id="clips">
             <div class="clip">
                 <div class="date">
-                    Jan 14, 2019
+                    Feb 6, 2020
+                </div>
+                <div class="article">
+                    <a href="https://www.dallasobserver.com/news/dallas-found-a-creative-way-to-address-slow-ambulances-11864545" class="link">Dallas Found a Creative Way to Address Slow Ambulances: Move the Goalpost</a>
+                    <span class="pub">
+                        Dallas Observer
+                    </span>
+                </div>
+            </div>
+            <div class="clip">
+                <div class="date">
+                    Jan 14, 2020
                 </div>
                 <div class="article">
                     <a href="https://www.dallasobserver.com/news/dallas-boosts-program-to-move-section-8-families-into-better-neighborhoods-11841337" class="link">Moving on Up: A Project to Place Public Housing Tenants in Better Neighborhoods Gets a Boost</a>
