--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
         <div id="clips">
             <div class="clip" data-tags="investigative">
                 <div class="date">
+                    Feb 18, 2020
+                </div>
+                <div class="article">
+                    <a href="https://www.dallasobserver.com/news/dallas-is-falling-far-short-of-its-ambitious-goal-to-become-bike-friendly-by-2021-11869666" class="link">Dallas Is Falling Far Short of Its Ambitious Goal to Become Bike Friendly By 2021</a>
+                    <span class="pub">
+                        Dallas Observer
+                    </span>
+                </div>
+            </div>
+            <div class="clip" data-tags="investigative">
+                <div class="date">
                     Feb 6, 2020
                 </div>
                 <div class="article">
