--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
         <div id="clips">
             <div class="clip" data-tags="investigative">
                 <div class="date">
+                    Mar 13, 2020
+                </div>
+                <div class="article">
+                    <a href="https://www.dallasobserver.com/news/dallas-handed-out-subsidies-in-exchange-for-affordable-housing-developers-got-around-it-11888160" class="link">Dallas Handed Out Subsidies in Exchange for Affordable Housing. Developers Got Around It.</a>
+                    <span class="pub">
+                        Dallas Observer
+                    </span>
+                </div>
+            </div>
+            <div class="clip" data-tags="investigative">
+                <div class="date">
                     Feb 18, 2020
                 </div>
                 <div class="article">
